<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_main_blue">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/about_author_header"
                    android:paddingLeft="6sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/string_author"
                    android:textColor="@color/color_white"
                    android:textSize="26sp"/>
            <TextView
                    android:id="@+id/about_author_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textColor="@color/color_white"
                    android:paddingLeft="6sp"
                    android:textSize="22sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_weight="0.71"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/about_blog_header"
                    android:paddingLeft="6sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/string_blog"
                    android:textColor="@color/color_white"
                    android:textSize="26sp"/>
            <TextView
                    android:id="@+id/about_blog_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textColor="@color/color_white"
                    android:paddingLeft="6sp"
                    android:textSize="22sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_weight="0.59"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/about_google_plus_header"
                    android:paddingLeft="6sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/string_google_plug"
                    android:textColor="@color/color_white"
                    android:textSize="26sp"/>
            <TextView
                    android:id="@+id/about_google_plus_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textColor="@color/color_white"
                    android:paddingLeft="6sp"
                    android:textSize="22sp"/>
        </LinearLayout>
        <TextView
                android:id="@+id/about_detail_header"
                android:paddingLeft="6sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_detail"
                android:textColor="@color/color_white"
                android:textSize="26sp"/>
        <TextView
                android:id="@+id/about_share_header"
                android:paddingLeft="6sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_share"
                android:textColor="@color/color_white"
                android:textSize="26sp"/>
    </LinearLayout>
</LinearLayout>